modify schema
